Стили для шапки

--- a/_dev/_jade/_common/menu.jade
+++ b/_dev/_jade/_common/menu.jade
@@ -1,6 +1,6 @@
-.b-menu
+ul.b-menu
    each element in ['Мобильные телефона', 'Планшеты', 'Mp3 плееры', 'Персональные компьютеры', 'Ноутбуки', 'Apple TV', 'Аксессуары']
-      .b-menu__element
+      li.b-menu__element
          .b-menu__element-tail
          .b-menu__element-text= element
          .b-menu__element-arrow
