--- a/_dev/_jade/_common/head.jade
+++ b/_dev/_jade/_common/head.jade
@@ -1,8 +1,9 @@
 .b-head
-    .b-logo
-    .b-contact
-        .b-wrapper
-            span.b-contact__code-phone +7 (921)
-            span.b-contact__phone 322 12 32
-        .b-contact__email manager@company.com
+    .wrapper
+        .b-logo
+        .b-contact
+            .b-wrapper
+                sup.b-contact__code-phone +7 (921)
+                span.b-contact__phone &nbsp;322 12 32
+            a(href="mailto:manager@company.com").b-contact__email manager@company.com
     include menu
