--- a/_dev/_jade/_layouts/layout.jade
+++ b/_dev/_jade/_layouts/layout.jade
@@ -7,8 +7,8 @@ html
         title
             block title
 
-        meta(name='viewport' content='width=device-width')
-        link(rel)
+        meta(name='viewport' content='width=device-width, initial-scale=1.0')
+        link(rel="stylesheet" href="/css/style.min.css" type="text/css" media="screen")
         <!--[if lt IE 9]>
         script(src="js/vendor/html5shiv/html5shiv.min.js")
         <![endif]-->
