--- a/_dev/_sass/_common.scss
+++ b/_dev/_sass/_common.scss
@@ -12,6 +12,8 @@ $color_gray_font: #5c7b98;
 
 $color_gray_menu: #f7f7f7;
 
+$color_active: $color_blue_font;
+
 .content-wrapper {
   width: $main_content_width;
   margin: 0 auto;
