--- a/_dev/_sass/_common.scss
+++ b/_dev/_sass/_common.scss
@@ -14,6 +14,8 @@ $color_gray_menu: #f7f7f7;
 
 $color_active: $color_blue_font;
 
+$color_gray_border: #dae1eb;
+
 .content-wrapper {
   width: $main_content_width;
   margin: 0 auto;
