Стили для aside

--- a/_dev/_jade/_layouts/layout.jade
+++ b/_dev/_jade/_layouts/layout.jade
@@ -18,10 +18,10 @@ html
         script(src="js/script.js")
     body
         include ../_common/head
-        .content-wrapper
+        .content-wrapper.cf
             include ../_common/nav
             include ../_common/aside
-            .maincontent
+            .maincontent.col4-3
                 block content
 
         include ../_common/footer
