--- a/_dev/_jade/_pages/index.jade
+++ b/_dev/_jade/_pages/index.jade
@@ -4,9 +4,9 @@ block title
    | Основная страница
 
 block content
-   section.b-products
+   section.b-products.cf
       each product in ['Apple Thunderbolt Display 27','Apple iMac 27"','iPhone 5s Gold','iPad Air Wi-Fi + Cellular 128GB - Silver','Apple iPod nano 7G 16 ГБ Blue','Роутер Wi-Fi Apple AirPort Extreme Base Station']
-         .b-product
+         .b-product.col3
             img.b-product__img
             .b-product__description
                a(href='#').b-product__description__title= product
