--- a/_dev/_jade/_common/aside.jade
+++ b/_dev/_jade/_common/aside.jade
@@ -1,11 +1,14 @@
-.b-aside
-   - var active = 0
-   each mark, index in ['iPhone','iPad','iMac','Macbook','iPod','Другое']
-      .b-aside__items
-         if active == index
-            h2.b-aside__items__main.activ= mark
-         else
+.b-aside.col4
+    - var active = 0
+    each mark, index in ['iPhone','iPad','iMac','Macbook','iPod','Другое']
+        mixin items
             h2.b-aside__items__main= mark
-         ul.b-aside__items__elements
-            each item in ['> iPhone 4S','> iPhone 5','> iPhone 5s с экслюзивным дизайном','> iPhone 6','> iPhone 6 plus']
-               li.b-aside__items__elements__element= item
+            ul.b-aside__items__elements
+                each item in ['> iPhone 4S','> iPhone 5','> iPhone 5s с экслюзивным дизайном','> iPhone 6','> iPhone 6 plus']
+                    li.b-aside__items__elements__element= item
+        if active == index
+            .b-aside__items.b-aside__items_active
+                +items
+        else
+            .b-aside__items
+                +items
