Стили для карточек продуктов в виде сетки

--- a/_dev/_jade/_common/aside.jade
+++ b/_dev/_jade/_common/aside.jade
@@ -1,14 +1,8 @@
 .b-aside.col4
     - var active = 0
     each mark, index in ['iPhone','iPad','iMac','Macbook','iPod','Другое']
-        mixin items
+        div(class=active == index ? 'b-aside__items b-aside__items_active' : 'b-aside__items')
             h2.b-aside__items__main= mark
             ul.b-aside__items__elements
                 each item in ['> iPhone 4S','> iPhone 5','> iPhone 5s с экслюзивным дизайном','> iPhone 6','> iPhone 6 plus']
                     li.b-aside__items__elements__element= item
-        if active == index
-            .b-aside__items.b-aside__items_active
-                +items
-        else
-            .b-aside__items
-                +items
