--- a/_dev/_sass/_section_aside.scss
+++ b/_dev/_sass/_section_aside.scss
@@ -2,7 +2,8 @@
   font-family: elektra_light_proregular;
   font-size: 15px;
   color: $color_gray_font;
-  margin-left: -1.33%
+  width: 230px;
+  float: left;
 }
 
 .b-aside__items__elements {
