--- a/_dev/_jade/_pages/index.jade
+++ b/_dev/_jade/_pages/index.jade
@@ -5,24 +5,25 @@ block title
 
 block content
    section.b-products.cf
-      each product in ['Apple Thunderbolt Display 27','Apple iMac 27"','iPhone 5s Gold','iPad Air Wi-Fi + Cellular 128GB - Silver','Apple iPod nano 7G 16 ГБ Blue','Роутер Wi-Fi Apple AirPort Extreme Base Station']
-         .b-product.col3
-            img.b-product__img
+      each product,index in ['Apple Thunderbolt Display 27','Apple iMac 27"','iPhone 5s Gold','iPad Air Wi-Fi + Cellular 128GB - Silver','Apple iPod nano 7G 16 ГБ Blue','Роутер Wi-Fi Apple AirPort Extreme Base Station']
+         .b-product.b-product_0
+            .b-product__img
+               img(src='img/products/#{index+1}.png',alt='#{product}')
             .b-product__description
                a(href='#').b-product__description__title= product
                ul.b-product__description__options
-                  li.b-product__description__options__option
+                  li.b-product__description__options__option.cf
                      .b-product__description__options__option__key Артикул
-                     .b-product__description__options__option-val 42787825
-                  li.b-product__description__options__option
+                     .b-product__description__options__option__val 42787825
+                  li.b-product__description__options__option.cf
                      .b-product__description__options__option__key Опция
-                     .b-product__description__options__option-val включена
-                  li.b-product__description__options__option
+                     .b-product__description__options__option__val включена
+                  li.b-product__description__options__option.cf
                      .b-product__description__options__option__key Цвет
-                     .b-product__description__options__option-val серебристый
-                  li.b-product__description__options__option
+                     .b-product__description__options__option__val серебристый
+                  li.b-product__description__options__option.cf
                      .b-product__description__options__option__key размер
-                     .b-product__description__options__option-val 1280*1245*90
-                  li.b-product__description__options__option
+                     .b-product__description__options__option__val 1280*1245*90
+                  li.b-product__description__options__option.cf
                      .b-product__description__options__option__key Вес
-                     .b-product__description__options__option-val 9 кг
+                     .b-product__description__options__option__val 9 кг
