Поправил нисподающий список стилей вывода таблицы продуктов

--- a/_dev/_sass/_block_products.scss
+++ b/_dev/_sass/_block_products.scss
@@ -1,5 +1,5 @@
-.b-product_0 {
-  &.b-product {
+.b-products_0 {
+  .b-product {
     border: 1px solid $color_gray_border;
     width: 230px;
     float: left;
@@ -53,8 +53,8 @@
   }
 }
 
-.b-product_1 {
-  &.b-product {
+.b-products_1 {
+  .b-product {
 
   }
 
