--- a/_dev/_jade/_pages/index.jade
+++ b/_dev/_jade/_pages/index.jade
@@ -4,9 +4,9 @@ block title
    | Основная страница
 
 block content
-   section.b-products.cf
+   section.b-products.b-products_0.cf
       each product,index in ['Apple Thunderbolt Display 27','Apple iMac 27"','iPhone 5s Gold','iPad Air Wi-Fi + Cellular 128GB - Silver','Apple iPod nano 7G 16 ГБ Blue','Роутер Wi-Fi Apple AirPort Extreme Base Station']
-         .b-product.b-product_0
+         .b-product
             .b-product__img
                img(src='img/products/#{index+1}.png',alt='#{product}')
             .b-product__description
