--- a/_dev/_jade/_pages/index.jade
+++ b/_dev/_jade/_pages/index.jade
@@ -27,3 +27,5 @@ block content
                   li.b-product__description__options__option.cf
                      .b-product__description__options__option__key Вес
                      .b-product__description__options__option__val 9 кг
+   include ../_common/block_dropdown
+   include ../_common/block_pagination
