--- a/_dev/_sass/_section_maincontent.scss
+++ b/_dev/_sass/_section_maincontent.scss
@@ -1,4 +1,16 @@
 .maincontent {
   float: left;
   width: 770px;
+
+  .b-dropdown {
+    float: left;
+    margin: 0 0 0 25px;
+  }
+
+  .b-pagination {
+    float: right;
+    margin: 0;
+    line-height: normal;
+    height: auto;
+  }
 }
