--- a/_dev/_sass/style.scss
+++ b/_dev/_sass/style.scss
@@ -1,5 +1,7 @@
 @import "common";
 @import "section_head";
+@import "block_dropdown";
+@import "block_pagination";
 @import "section_nav";
 @import "section_aside";
 @import "section_maincontent";
