--- a/_dev/_sass/_section_maincontent.scss
+++ b/_dev/_sass/_section_maincontent.scss
@@ -15,3 +15,21 @@
     height: auto;
   }
 }
+
+.b-description {
+  margin: 35px 0 0 25px;
+  font-family: elektra_light_proregular;
+  font-size: 15px;
+  color: $color_gray_font
+}
+
+.b-description__title {
+  font-family: elektra_light_probold;
+  margin: 0 0 6px 0;
+  font-weight: normal;
+  font-size: 25px;
+}
+
+.b-description__text {
+  text-align: justify;
+}
