--- a/_dev/_sass/_section_aside.scss
+++ b/_dev/_sass/_section_aside.scss
@@ -13,13 +13,13 @@
   padding: 0;
   background: $color_gray_menu;
 
-  .b-aside__items_active & {
-    display: block;
-  }
+  //  .b-aside__items_active & {
+  //    display: block;
+  //  }
 }
 
 .b-aside__items__main {
-  @extend .b-aside;
+  font-size: 15px;
   margin: 0;
   padding: 4px 20px;
   background: $color_gray_menu;
@@ -41,6 +41,16 @@
   border-bottom: 1px solid $color_gray_border;
   border-top: 1px solid white;
   cursor: pointer;
+
+  .icon {
+    display: inline-block;
+    content: ' ';
+    height: 8px;
+    width: 7px;
+    background: url('/css/img/carret-r.png') no-repeat;
+    margin-bottom: 1px;
+    margin-right: 4px;
+  }
 
   &:hover {
     background: #dce6f0;
