Добавил ссылки на домашнюю страницу для логотипа, ссылки на социальные сети. Создал объект BtnUp

--- a/_dev/_jade/_common/footer.jade
+++ b/_dev/_jade/_common/footer.jade
@@ -1,5 +1,7 @@
 .b-footer
-    .b-logo.b-logo_footer
+    a.cf(href="/")
+        span.hide На главную
+        .b-logo.b-logo_footer
     .b-maps
         .b-maps__element
             h4.b-maps__element__items-title О магазине
@@ -21,19 +23,19 @@
                         a(href='#')= val
     ul.b-socials
         .b-socials__app.cf
-            li.b-appstore
-                a(href="#")
+            a(href="#")
+                li.b-appstore
                     span.hide App Store
-            li.b-googleplay
-                a(href="#")
+            a(href="#")
+                li.b-googleplay
                     span.hide Google play
         .b-socials__socials.cf
-            li.b-vkontakte
-                a(href="#")
+            a(href="#")
+                li.b-vkontakte
                     span.hide ВКонтакте
-            li.b-facebook
-                a(href="#")
+            a(href="#")
+                li.b-facebook
                     span.hide Facebook
-            li.b-twitter
-                a(href="#")
+            a(href="#")
+                li.b-twitter
                     span.hide Twitter
