--- a/_dev/_jade/_common/head.jade
+++ b/_dev/_jade/_common/head.jade
@@ -1,8 +1,10 @@
 .b-head
     .wrapper
-        .b-logo
+        a.cf(href="/")
+            span.hide На главную
+            .b-logo
         .b-contact
-            .b-wrapper
+            a(href="tel:+79213221232")
                 sup.b-contact__code-phone +7 (921)
                 span.b-contact__phone &nbsp;322 12 32
             a(href="mailto:manager@company.com").b-contact__email manager@company.com
