--- a/_dev/_sass/_section_head.scss
+++ b/_dev/_sass/_section_head.scss
@@ -26,6 +26,10 @@
   position: absolute;
   left: 911px;
   top: 24px;
+  a {
+    display: block;
+    text-decoration: none;
+  }
 }
 
 .b-contact__code-phone {
@@ -65,8 +69,7 @@
   font-size: 15px;
   color: $color_gray_font;
 
-  @include box-shadow(0 1px 0 rgba(0, 0, 0, .15));
-  width: 976px;
+  width: 980px;
 }
 
 .b-menu__element-tail {
@@ -77,9 +80,11 @@
   border-width: 20px 0 20px 12px;
   left: -12px;
 
-  .b-menu__element:first-child & {
-    @include box-shadow(0 1px 0 rgba(0, 0, 0, .15));
-  }
+  @include box-shadow(0 1px 0 rgba(0, 0, 0, .15));
+
+//  .b-menu__element:first-child & {
+//    @include box-shadow(0 1px 0 rgba(0, 0, 0, .15));
+//  }
   .b-menu__element_hover & {
     border-color: #dce6f0 transparent;
   }
@@ -95,6 +100,7 @@
   position: relative;
   cursor: pointer;
   margin-left: 10px;
+  @include box-shadow(0 1px 0 rgba(0, 0, 0, .15));
 
   &:first-child {
     margin-left: 0;
